Update DEX configuration and branding

--- a/.env
+++ b/.env
@@ -25,7 +25,7 @@ VITE_TRADING_VIEW_COLOR_CONFIG=
 VITE_AVAILABLE_LANGUAGES=en,zh,ja,es,ko,vi,de,fr,ru,id,tr,it,pt,uk,pl,nl
 VITE_SEO_SITE_NAME=PerpX
 VITE_SEO_SITE_DESCRIPTION=PerpX is a next-gen perpetual crypto exchange, engineered for speed, reliability, and ultra-cheap fees. Trade your favorite assets with up to 100x leverage on one of the most advanced platforms in the industry.
-VITE_SEO_SITE_URL=https://dex.orderly.network/perpx-7577/
+VITE_SEO_SITE_URL=https://dex.perpx.trading
 VITE_SEO_SITE_LANGUAGE=
 VITE_SEO_SITE_LOCALE=
 VITE_SEO_TWITTER_HANDLE=
