Update DEX configuration and branding

--- a/.env
+++ b/.env
@@ -1,33 +1,2 @@
-VITE_ORDERLY_BROKER_ID=levr
-VITE_ORDERLY_BROKER_NAME=Perpx
-VITE_ORDERLY_MAINNET_CHAINS=
-VITE_ORDERLY_TESTNET_CHAINS=
-VITE_DEFAULT_CHAIN=
-VITE_TELEGRAM_URL=
-VITE_DISCORD_URL=
-VITE_TWITTER_URL=
-VITE_WALLETCONNECT_PROJECT_ID=
-VITE_PRIVY_APP_ID=
-VITE_PRIVY_TERMS_OF_USE=
-VITE_ENABLED_MENUS=Trading,Portfolio,Markets,Rewards
-VITE_CUSTOM_MENUS=
-VITE_ENABLE_ABSTRACT_WALLET=false
-VITE_DISABLE_MAINNET=false
-VITE_DISABLE_TESTNET=false
-VITE_DISABLE_EVM_WALLETS=false
-VITE_DISABLE_SOLANA_WALLETS=false
-VITE_ENABLE_CAMPAIGNS=false
-VITE_HAS_PRIMARY_LOGO=true
-VITE_HAS_SECONDARY_LOGO=true
-VITE_USE_CUSTOM_PNL_POSTERS=false
-VITE_CUSTOM_PNL_POSTER_COUNT=0
-VITE_TRADING_VIEW_COLOR_CONFIG=
-VITE_AVAILABLE_LANGUAGES=en,zh,ja,es,ko,vi,de,fr,ru,id,tr,it,pt,uk,pl,nl
-VITE_SEO_SITE_NAME=PerpX
-VITE_SEO_SITE_DESCRIPTION=PerpX is a next-gen perpetual crypto exchange, engineered for speed, reliability, and ultra-cheap fees. Trade your favorite assets with up to 100x leverage on one of the most advanced platforms in the industry.
-VITE_SEO_SITE_URL=https://dex.perpx.trading
-VITE_SEO_SITE_LANGUAGE=
-VITE_SEO_SITE_LOCALE=
-VITE_SEO_TWITTER_HANDLE=
-VITE_SEO_THEME_COLOR=
-VITE_SEO_KEYWORDS=perpetual crypto exchange, crypto perp trading, trade crypto with leverage, 100x leverage crypto, low fee crypto exchange, decentralized perp exchange, best perp DEX, leverage trading crypto, crypto futures trading, onchain perpetuals, PerpX crypto exchange, PerpX trading platform, high leverage DEX, crypto derivatives platform
+# Build-time environment variables only
+# Runtime configuration is in /public/config.js
